# Orbital-Sim-N

./: .gitignore  BUILD_MODES.md  CMakeLists.txt  CMakeUserPresets.json  README.md  build.sh  calculation_functions.c  calculation_functions.h  compile-linux.sh  conanfile.py  conanfile.txt  config.h  main.c  orbital_sim.c  osn_telem.csv  sdl_elements.c  sdl_elements.h  serve_web.py  update_log.txt  vcpkg.json  web
.claude/: settings.local.json
.github/workflows/: matrix-deploy.yml  web-deploy.yml
Verification/: NESC_compare.m  dataplot.m  osn_telem.csv  telem_graph.m
Verification/Earth-Lunar System - Step 0.01/: osn_telem.csv
Verification/NESC Lunar Test Case 1/: NESC_test.csv  osn_telem.csv  step0-0001.csv  step0-001.csv
data/: planet_data.csv  planet_data.json  simulation_data.json  spacecraft_data.json
data analysis/: read_binary_data.py
examples/: lunar_figure_8.json  lunar_orbit.json  solar_system.json
other/: orbital_energy.csv  plotdata.m
shaders/: simple.frag  simple.vert  text.frag  text.vert
shaders/web/: simple.frag  simple.vert  text.frag  text.vert
src/: calculation_functions.c  calculation_functions.h  config.c  config.h  globals.c  globals.h  headless_main.c  main.c  renderer.c  renderer.h  sdl_elements.c  sdl_elements.h  sim_calculations.c  sim_calculations.h  stats_window.c  stats_window.h  types.h
src/gui/: GL_renderer.c  GL_renderer.h  SDL_engine.c  SDL_engine.h  craft_view.c  craft_view.h  models.c  renderer.c  renderer.h  stb_truetype.h
src/math/: matrix.h
src/sim/: bodies.c  bodies.h  simulation.c  simulation.h  spacecraft.c  spacecraft.h
src/utility/: json_loader.c  json_loader.h  sim_thread.h  telemetry_export.c  telemetry_export.h
utilities/Verification/: telem_graph.m
utilities/Verification/Earth-Lunar System - Step 0.01 1 Year/: osn_telem.csv
utilities/Verification/NESC Lunar Test Case 1/: simulation_data.json
utilities/delta_v_optimization/: delta_v_optimization.csv  plot.py
web/: index.html
